--- a/pong/index.html
+++ b/pong/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="manifest" href="manifest.webmanifest">
     <!-- <link rel="modulepreload" href="worker.js"> -->
-    <title>Gamedev Canvas Workshop</title>
+    <title>Games: Pong</title>
     <style>
     	* { padding: 0; margin: 0; }
       html, body, canvas { background: #2C3E50; }
@@ -14,7 +14,7 @@
 
       @media (orientation: landscape) {
         canvas {
-          height: min(98vh, 98vw);
+          max-height: min(98vh, 98vw);
           max-width: max(98vh, 98vw);
         }
       }
@@ -45,7 +45,8 @@
 
   const offscreen = canvas.transferControlToOffscreen();
   const worker = new Worker('worker.js', { type: 'module' });
-  worker.postMessage({ type: 'INIT', entities: [], canvas: offscreen }, [offscreen]);
+  const config = {};
+  worker.postMessage({ type: 'INIT', config, canvas: offscreen }, [offscreen]);
   // worker.addEventListener('message', (e) => {
   //   busy = false;
   //   // ctx.clearRect(0, 0, canvas.width, canvas.height);
