--- a/pong/index.html
+++ b/pong/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="modulepreload" href="worker.js">
@@ -21,45 +23,66 @@
       html, body { height: 100vh; display: flex; justify-content: center; align-items: center; }
 
       canvas {
+        grid-column: 1;
+        grid-row: 1 / 4;
         display: block;
         margin: 0 auto;
         outline: 1px solid #fff;
         background-image:
-          repeating-linear-gradient(0deg, #fffa, #fffa 10px, transparent 10px, transparent 20px);
-        background-size: 10px 700px;
+          repeating-linear-gradient(0deg, #fffa, #fffa 1%, transparent 1%, transparent 2%);
+        background-size: min(1%, 5px) min(100%, 700px);
         background-repeat: no-repeat;
         background-position: center;
       }
 
-      .score, .prompt {
-        position: absolute;
+      .game {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+      }
+
+      .score, .prompt, .status {
         font-family: 'VT323', monospace;
-        font-size: 2.4em;
+        font-size: 2.4rem;
         color: #fff;
         pointer-events: none;
+        z-index: 1;
       }
 
       .prompt {
+        grid-column: 1;
+        grid-row: 2;
+        align-self: center;
+        justify-self: center;
         background: var(--main-bg-color);
-        padding: 1.1em;
+        padding: 1.1rem;
+      }
+
+      .status {
+        grid-column: 1;
+        grid-row: 3;
+        align-self: end;
+        justify-self: end;
+        font-size: 1.4rem;
+        padding: 2%;
       }
 
       .score {
-        top: 5%;
-        width: 80%;
+        grid-column: 1;
+        grid-row: 1;
         display: flex;
         justify-content: space-between;
+        padding: 2% 5%;
       }
 
       @media (orientation: landscape) {
-        canvas {
+        .game, canvas {
           max-height: min(98vh, 98vw);
           max-width: max(98vh, 98vw);
         }
       }
       @media (orientation: portrait) {
-        canvas {
-          width: 100vw;
+        .game, canvas {
+          width: 99vw;
         }
       }
 
@@ -67,22 +90,93 @@
     </style>
 </head>
 <body>
+  <div class="game">
+    <canvas width="1400" height="800"></canvas>
 
-  <div class="score">
-    <div class="score-player1">0</div>
-    <div class="score-player2">0</div>
+    <div class="score">
+      <div class="score-player1">0</div>
+      <div class="score-player2">0</div>
+    </div>
+
+    <div class="prompt">Press any key to start</div>
+    <div class="status">Loading...</div>
   </div>
 
-  <div class="prompt">Press any key to start</div>
-
-  <canvas id="canvas" width="1400" height="800"></canvas>
-
   <script type="module">
-    const canvas = document.getElementById("canvas");
-    // const gamepad = Gamepad.create();
+    import Vector from './vector.js';
+    class Gamepad {
+      static #instance = null;
+      #dpad1 = Vector.create(0, 0);
+      #dpad2 = Vector.create(0, 0);
+      worker = null;
 
+      get dpad1() {
+        const gamepad = navigator.getGamepads()[0];
+        return gamepad ? Vector.create(gamepad.axes[1], gamepad.axes[0]) : this.#dpad1;
+      }
+
+      get dpad2() {
+        const gamepad = navigator.getGamepads()[1];
+        return gamepad ? Vector.create(gamepad.axes[1], gamepad.axes[0]) : this.#dpad1;
+      }
+
+      #init() {
+        // window.addEventListener("gamepadconnected", (e) => {
+        //   console.log("Gamepad connected from index %d: %s",
+        //     e.gamepad.index, e.gamepad.id,
+        //     e.gamepad.buttons.length, e.gamepad.axes.length);
+        //   this.#gp = e.gamepad; // navigator.getGamepads()[e.gamepad.index];
+        //   console.log(this.#gp)
+        // });
+        // window.addEventListener("gamepaddisconnected", (e) => {
+        //   console.log("Gamepad disconnected from index %d: %s",
+        //     e.gamepad.index, e.gamepad.id,
+        //     e.gamepad.buttons.length, e.gamepad.axes.length);
+        //   this.#gp = e.gamepad; // navigator.getGamepads()[e.gamepad.index];
+        //   console.log(this.#gp)
+        // });
+        window.addEventListener('keydown', (e) => {
+          if (e.key == 'd') this.#dpad1.x = 1;
+          if (e.key == 'a') this.#dpad1.x = -1;
+          if (e.key == 'w') this.#dpad1.y = -1;
+          if (e.key == 's') this.#dpad1.y = 1;
+
+          if (e.key == 'ArrowRight') this.#dpad2.x = 1;
+          if (e.key == 'ArrowLeft') this.#dpad2.x = -1;
+          if (e.key == 'ArrowUp') this.#dpad2.y = -1;
+          if (e.key == 'ArrowDown') this.#dpad2.y = 1;
+
+          this.worker.postMessage({ type: 'change______', dpad1: this.#dpad1, dpad2: this.#dpad2 });
+        }, false);
+        window.addEventListener('keyup', (e) => {
+          if (e.key == 'd') this.#dpad1.x = 0;
+          if (e.key == 'a') this.#dpad1.x = 0;
+          if (e.key == 'w') this.#dpad1.y = 0;
+          if (e.key == 's') this.#dpad1.y = 0;
+
+          if (e.key == 'ArrowRight') this.#dpad2.x = 0;
+          if (e.key == 'ArrowLeft') this.#dpad2.x = 0;
+          if (e.key == 'ArrowUp') this.#dpad2.y = 0;
+          if (e.key == 'ArrowDown') this.#dpad2.y = 0;
+
+          this.worker.postMessage({ type: 'change______', dpad1: this.#dpad1, dpad2: this.#dpad2 });
+        }, false);
+      }
+
+      static create(worker) {
+        if (this.#instance) return this.#instance;
+
+        this.#instance = new Gamepad();
+        this.#instance.worker = worker;
+        this.#instance.#init();
+        return this.#instance;
+      }
+    }
+
+    const canvas = document.querySelector('canvas');
     const offscreen = canvas.transferControlToOffscreen();
     const worker = new Worker('worker.js', { type: 'module' });
+    const gamepad = Gamepad.create(worker);
     const config = {};
 
     worker.postMessage({ type: 'INIT', config, canvas: offscreen }, [offscreen]);
@@ -90,6 +184,7 @@
     const scorePlayer1 = document.querySelector('.score-player1');
     const scorePlayer2 = document.querySelector('.score-player2');
     const prompt = document.querySelector(`.prompt`);
+    const status = document.querySelector(`.status`);
 
     worker.addEventListener('message', (e) => {
       switch (e.data.type) {
@@ -109,7 +204,7 @@
     });
 
     if (window.screen.orientation.lock) {
-      window.screen.orientation.lock('portrait')
+      window.screen.orientation.lock('landscape')
         .catch(e => console.warn(e));
     }
   </script>
