add joycon support

--- a/pong/index.html
+++ b/pong/index.html
@@ -103,76 +103,7 @@
   </div>
 
   <script type="module">
-    import Vector from './vector.js';
-    class Gamepad {
-      static #instance = null;
-      #dpad1 = Vector.create(0, 0);
-      #dpad2 = Vector.create(0, 0);
-      worker = null;
-
-      get dpad1() {
-        const gamepad = navigator.getGamepads()[0];
-        return gamepad ? Vector.create(gamepad.axes[1], gamepad.axes[0]) : this.#dpad1;
-      }
-
-      get dpad2() {
-        const gamepad = navigator.getGamepads()[1];
-        return gamepad ? Vector.create(gamepad.axes[1], gamepad.axes[0]) : this.#dpad1;
-      }
-
-      #init() {
-        // window.addEventListener("gamepadconnected", (e) => {
-        //   console.log("Gamepad connected from index %d: %s",
-        //     e.gamepad.index, e.gamepad.id,
-        //     e.gamepad.buttons.length, e.gamepad.axes.length);
-        //   this.#gp = e.gamepad; // navigator.getGamepads()[e.gamepad.index];
-        //   console.log(this.#gp)
-        // });
-        // window.addEventListener("gamepaddisconnected", (e) => {
-        //   console.log("Gamepad disconnected from index %d: %s",
-        //     e.gamepad.index, e.gamepad.id,
-        //     e.gamepad.buttons.length, e.gamepad.axes.length);
-        //   this.#gp = e.gamepad; // navigator.getGamepads()[e.gamepad.index];
-        //   console.log(this.#gp)
-        // });
-        window.addEventListener('keydown', (e) => {
-          if (e.key == 'd') this.#dpad1.x = 1;
-          if (e.key == 'a') this.#dpad1.x = -1;
-          if (e.key == 'w') this.#dpad1.y = -1;
-          if (e.key == 's') this.#dpad1.y = 1;
-
-          if (e.key == 'ArrowRight') this.#dpad2.x = 1;
-          if (e.key == 'ArrowLeft') this.#dpad2.x = -1;
-          if (e.key == 'ArrowUp') this.#dpad2.y = -1;
-          if (e.key == 'ArrowDown') this.#dpad2.y = 1;
-
-          this.worker.postMessage({ type: 'change______', dpad1: this.#dpad1, dpad2: this.#dpad2 });
-        }, false);
-        window.addEventListener('keyup', (e) => {
-          if (e.key == 'd') this.#dpad1.x = 0;
-          if (e.key == 'a') this.#dpad1.x = 0;
-          if (e.key == 'w') this.#dpad1.y = 0;
-          if (e.key == 's') this.#dpad1.y = 0;
-
-          if (e.key == 'ArrowRight') this.#dpad2.x = 0;
-          if (e.key == 'ArrowLeft') this.#dpad2.x = 0;
-          if (e.key == 'ArrowUp') this.#dpad2.y = 0;
-          if (e.key == 'ArrowDown') this.#dpad2.y = 0;
-
-          this.worker.postMessage({ type: 'change______', dpad1: this.#dpad1, dpad2: this.#dpad2 });
-        }, false);
-      }
-
-      static create(worker) {
-        if (this.#instance) return this.#instance;
-
-        this.#instance = new Gamepad();
-        this.#instance.worker = worker;
-        this.#instance.#init();
-        return this.#instance;
-      }
-    }
-
+    import Gamepad from './gamepad.js';
     const canvas = document.querySelector('canvas');
     const offscreen = canvas.transferControlToOffscreen();
     const worker = new Worker('worker.js', { type: 'module' });
