--- a/pong/index.html
+++ b/pong/index.html
@@ -98,26 +98,49 @@
       <div class="score-player2">0</div>
     </div>
 
-    <div class="prompt"></div>
+    <div class="prompt">Loading...</div>
     <div class="status"></div>
   </div>
 
   <script type="module">
     import Gamepad from './gamepad.js';
-    import { SCORE, PAUSE, STATUS_UPDATE } from './worker.js';
+    import { INIT, SCORE, PAUSE, CONTROLS_UPDATE } from './worker.js';
 
+    const config = {};
     const canvas = document.querySelector('canvas');
     const offscreen = canvas.transferControlToOffscreen();
     const worker = new Worker('worker.js', { type: 'module' });
-    const gamepad = Gamepad.create(worker);
-    const config = {};
-
-    worker.postMessage({ type: 'INIT', config, canvas: offscreen }, [offscreen]);
+    const gamepad = Gamepad.create();
 
     const scorePlayer1 = document.querySelector('.score-player1');
     const scorePlayer2 = document.querySelector('.score-player2');
     const prompt = document.querySelector(`.prompt`);
     const status = document.querySelector(`.status`);
+    prompt.style.visibility = 'hidden';
+
+    const statusUpdate = (message) => {
+      status.textContent = message;
+      status.style.visibility = 'visible';
+      setTimeout(() => {
+        status.textContent = '';
+        status.style.visibility = 'hidden';
+      }, 3000)
+    }
+
+    worker.postMessage({ type: INIT, config, canvas: offscreen }, [offscreen]);
+
+    window.addEventListener('gamepadupdated', (e) => {
+      const { dpad1, dpad2 } = e.detail;
+      worker.postMessage({ type: CONTROLS_UPDATE, dpad1, dpad2 });
+    });
+
+    window.addEventListener("gamepadconnected", () => {
+      statusUpdate('Gamepad connected');
+    });
+
+    window.addEventListener("gamepaddisconnected", () => {
+      statusUpdate('Gamepad disconnected');
+    });
 
     worker.addEventListener('message', (e) => {
       switch (e.data.type) {
@@ -133,21 +156,21 @@
             prompt.style.visibility = 'hidden';
           }
           break;
-        case STATUS_UPDATE:
-          status.textContent = e.data.message;
-          status.style.visibility = 'visible';
-          setTimeout(() => {
-            status.textContent = '';
-            status.style.visibility = 'hidden';
-          }, 3000)
-          break;
       }
     });
 
-    if (window.screen.orientation.lock) {
-      window.screen.orientation.lock('landscape')
-        .catch(e => console.warn(e));
-    }
+    // if (window.screen.orientation.lock) {
+    //   window.screen.orientation.lock('landscape')
+    //     .catch(e => console.warn(e));
+    // }
+
+    // if (!document.fullscreenElement) {
+    //   canvas.addEventListener('touchstart', (e) => {
+    //     document.body.requestFullscreen().catch(err => {
+    //       // alert(`Error attempting to enable full-screen mode: ${err.message} (${err.name})`);
+    //     });
+    //   });
+    // }
   </script>
 
 </body>
