--- a/pong/index.html
+++ b/pong/index.html
@@ -17,12 +17,13 @@
     <title>Games: Pong</title>
 </head>
 <body>
-  <canvas width="1400" height="800"></canvas>
-
-  <div class="gui">
-    <div class="score">00 : 00</div>
-    <div class="prompt">Loading...</div>
-    <div class="status"></div>
+  <div class="container">
+    <div class="gui">
+      <div class="score">00 : 00</div>
+      <div class="prompt">Loading...</div>
+      <div class="status"></div>
+    </div>
+    <canvas width="1400" height="800"></canvas>
   </div>
 
   <script type="module">
@@ -100,19 +101,6 @@
         worker.postMessage({ type: PAUSE });
       }
     });
-
-    // if (window.screen.orientation.lock) {
-    //   window.screen.orientation.lock('landscape')
-    //     .catch(e => console.warn(e));
-    // }
-
-    // if (!document.fullscreenElement) {
-    //   canvas.addEventListener('touchstart', (e) => {
-    //     document.body.requestFullscreen().catch(err => {
-    //       // alert(`Error attempting to enable full-screen mode: ${err.message} (${err.name})`);
-    //     });
-    //   });
-    // }
   </script>
 
 </body>
