add: getSightPolygon function

--- a/shooter/index.html
+++ b/shooter/index.html
@@ -13,7 +13,7 @@
 
   <script type="module">
     import Vector from './vector.js';
-    import { Particle, Ray, Boundary } from './entities/index.js';
+    import { Particle, Ray, Boundary, Scene } from './entities/index.js';
     import Gamepad from './gamepad.js';
 
     const gamepad = Gamepad.create();
@@ -53,8 +53,8 @@
     const entities = [];
     // entities[0] = Player(150,100, gamepad.dpad1);
     // entities[1] = Player(100,100, gamepad.dpad2);
-    entities[0] = Particle.create({ position: Vector.create(130, 100), r: 10 });
-    // entities[1] = Particle.create({ position: Vector.create(30, 100), r: 15 });
+    entities[0] = Particle.create({ position: Vector.create(250, 250), r: 10 });
+    // entities[1] = Particle.create({ position: Vector.create(30, 100), r: 10 });
     // entities[2] = Particle.create({ position: Vector.create(230, 100), r: 20 });
 
     const rays = [];
@@ -64,13 +64,21 @@
     }
 
     const boundaries = [];
-    boundaries[0] = Boundary.create({ a: Vector.create(500, 50), b: Vector.create(500, 400) });
-    boundaries[5] = Boundary.create({ a: Vector.create(350, 150), b: Vector.create(350, 500) });
+    // boundaries[0] = Boundary.create({ a: Vector.create(500, 50), b: Vector.create(500, 400) });
+    // boundaries[5] = Boundary.create({ a: Vector.create(350, 150), b: Vector.create(350, 500) });
 
-    boundaries[1] = Boundary.create({ a: Vector.create(10, 10), b: Vector.create(790, 10) });
-    boundaries[2] = Boundary.create({ a: Vector.create(790, 10), b: Vector.create(790, 590) });
-    boundaries[3] = Boundary.create({ a: Vector.create(10, 590), b: Vector.create(790, 590) });
-    boundaries[4] = Boundary.create({ a: Vector.create(10, 10), b: Vector.create(10, 590) });
+    boundaries[0] = Boundary.create({ a: Vector.create(10, 10), b: Vector.create(790, 10) });
+    boundaries[1] = Boundary.create({ a: Vector.create(790, 10), b: Vector.create(790, 590) });
+    boundaries[2] = Boundary.create({ a: Vector.create(10, 590), b: Vector.create(790, 590) });
+    boundaries[3] = Boundary.create({ a: Vector.create(10, 10), b: Vector.create(10, 590) });
+
+    boundaries[4] = Boundary.create({ a: Vector.create(100, 100), b: Vector.create(50, 200) });
+    boundaries[5] = Boundary.create({ a: Vector.create(50, 200), b: Vector.create(150, 130) });
+    boundaries[6] = Boundary.create({ a: Vector.create(150, 130), b: Vector.create(100, 100) });
+
+    boundaries[7] = Boundary.create({ a: Vector.create(400, 400), b: Vector.create(330, 250) });
+    boundaries[8] = Boundary.create({ a: Vector.create(330, 250), b: Vector.create(300, 430) });
+    boundaries[9] = Boundary.create({ a: Vector.create(300, 430), b: Vector.create(400, 400) });
 
     const render = (time) => {
       // ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
@@ -81,8 +89,9 @@
         boundary.render(ctx);
       });
 
+      entities[0].position.addTo(Vector.create(gamepad.dpad1[0] * .5, gamepad.dpad1[1] * .5));
+      // entities[1].position.addTo(Vector.create(gamepad.dpad2[0] * 1, gamepad.dpad2[1] * 1));
       entities.forEach(entity => {
-        entity.velocity.addTo(Vector.create(gamepad.dpad1[0] * .05, gamepad.dpad1[1] * .05));
         // entity.velocity.length -= .1;
         // entity.position.addTo(Vector.create(gamepad.dpad1[0], gamepad.dpad1[1]));
         entity.position.addTo(entity.velocity);
@@ -90,38 +99,63 @@
       entities.forEach(entity => { entity.render(ctx) });
       // entities.forEach(entity => { entity.debug() });
 
-      rays[0].pointAt(boundaries[0].a);
-      rays[1].pointAt(boundaries[0].b);
+      // rays[0].pointAt(boundaries[0].a);
+      // rays[1].pointAt(boundaries[0].b);
 
-      rays[2].direction.angle = rays[0].direction.angle + 0.00001;
-      rays[3].direction.angle = rays[0].direction.angle - 0.00001;
+      // rays[2].direction.angle = rays[0].direction.angle + 0.00001;
+      // rays[3].direction.angle = rays[0].direction.angle - 0.00001;
 
-      rays[4].direction.angle = rays[1].direction.angle + 0.00001;
-      rays[5].direction.angle = rays[1].direction.angle - 0.00001;
+      // rays[4].direction.angle = rays[1].direction.angle + 0.00001;
+      // rays[5].direction.angle = rays[1].direction.angle - 0.00001;
 
-      rays[6].pointAt(boundaries[4].a);
-      rays[7].direction.angle = rays[6].direction.angle + 0.00001;
-      rays[8].direction.angle = rays[6].direction.angle - 0.00001;
+      // rays[6].pointAt(boundaries[4].a);
+      // rays[7].direction.angle = rays[6].direction.angle + 0.00001;
+      // rays[8].direction.angle = rays[6].direction.angle - 0.00001;
 
-      rays[9].pointAt(boundaries[4].b);
-      rays[10].direction.angle = rays[9].direction.angle + 0.00001;
-      rays[11].direction.angle = rays[9].direction.angle - 0.00001;
+      // rays[9].pointAt(boundaries[4].b);
+      // rays[10].direction.angle = rays[9].direction.angle + 0.00001;
+      // rays[11].direction.angle = rays[9].direction.angle - 0.00001;
 
-      rays[12].pointAt(boundaries[3].b);
-      rays[13].direction.angle = rays[12].direction.angle + 0.00001;
-      rays[14].direction.angle = rays[12].direction.angle - 0.00001;
+      // rays[12].pointAt(boundaries[3].b);
+      // rays[13].direction.angle = rays[12].direction.angle + 0.00001;
+      // rays[14].direction.angle = rays[12].direction.angle - 0.00001;
 
-      rays[15].pointAt(boundaries[2].a);
-      rays[16].direction.angle = rays[15].direction.angle + 0.00001;
-      rays[17].direction.angle = rays[15].direction.angle - 0.00001;
+      // rays[15].pointAt(boundaries[2].a);
+      // rays[16].direction.angle = rays[15].direction.angle + 0.00001;
+      // rays[17].direction.angle = rays[15].direction.angle - 0.00001;
 
-      rays[18].pointAt(boundaries[5].a);
-      rays[19].direction.angle = rays[18].direction.angle + 0.00001;
-      rays[20].direction.angle = rays[18].direction.angle - 0.00001;
+      // rays[18].pointAt(boundaries[5].a);
+      // rays[19].direction.angle = rays[18].direction.angle + 0.00001;
+      // rays[20].direction.angle = rays[18].direction.angle - 0.00001;
 
-      rays[21].pointAt(boundaries[5].b);
-      rays[22].direction.angle = rays[21].direction.angle + 0.00001;
-      rays[23].direction.angle = rays[21].direction.angle - 0.00001;
+      // rays[21].pointAt(boundaries[5].b);
+      // rays[22].direction.angle = rays[21].direction.angle + 0.00001;
+      // rays[23].direction.angle = rays[21].direction.angle - 0.00001;
+
+      const drawPolygon = (pts) => {
+        ctx.beginPath();
+        ctx.moveTo(pts[0].point.x, pts[0].point.y);
+        pts.forEach(pt => {
+          ctx.lineTo(pt.point.x, pt.point.y);
+        });
+
+        const gradient = ctx.createRadialGradient(
+          entities[0].position.x, entities[0].position.y,
+          0,
+          entities[0].position.x, entities[0].position.y,
+          300
+          )
+        gradient.addColorStop(0, 'rgba(255, 255, 150, .4)');
+        gradient.addColorStop(.8, 'rgba(255, 255, 150, .01)');
+        gradient.addColorStop(1, 'rgba(255, 255, 255, .001)');
+        ctx.fillStyle = gradient; // 'rgba(255, 255, 255, .1)';
+        // ctx.strokeStyle = 'rgba(255, 255, 255, .7)';
+        ctx.fill();
+        // ctx.stroke()
+      }
+
+      drawPolygon(Scene.getSightPolygon(entities[0].position, boundaries));
+      // drawPolygon(Scene.getSightPolygon(entities[1].position, boundaries));
 
       // ctx.beginPath();
       // ctx.strokeStyle = 'rgba(255, 255, 255, .2)';
@@ -131,49 +165,49 @@
       // })
       // ctx.stroke();
 
-      const pts = [];
-      rays.forEach(ray => {
-        let closestIntersect = null;
-        boundaries.forEach(boundary => {
-          const { point: pt, distance } = ray.cast(boundary) || {};
-          if (pt) {
-            // ctx.beginPath();
-            // ctx.arc(pt.x, pt.y, 5, 0, Math.PI*2);
-            // ctx.fillStyle = "#FFFFFF";
-            // ctx.fill();
-            // ctx.closePath();
-            if (!closestIntersect || distance < closestIntersect.distance) {
-              closestIntersect = { pt, distance }
-            }
-          }
-        });
-        if (closestIntersect) {
-          pts.push(closestIntersect.pt);
-        }
-      });
+      // const pts = [];
+      // rays.forEach(ray => {
+      //   let closestIntersect = null;
+      //   boundaries.forEach(boundary => {
+      //     const { point: pt, distance } = ray.cast(boundary) || {};
+      //     if (pt) {
+      //       // ctx.beginPath();
+      //       // ctx.arc(pt.x, pt.y, 5, 0, Math.PI*2);
+      //       // ctx.fillStyle = "#FFFFFF";
+      //       // ctx.fill();
+      //       // ctx.closePath();
+      //       if (!closestIntersect || distance < closestIntersect.distance) {
+      //         closestIntersect = { pt, distance }
+      //       }
+      //     }
+      //   });
+      //   if (closestIntersect) {
+      //     pts.push(closestIntersect.pt);
+      //   }
+      // });
 
-      pts.sort((a, b) => {
-        return Math.atan2(b.y - entities[0].position.y, b.x - entities[0].position.x) - Math.atan2(a.y - entities[0].position.y, a.x - entities[0].position.x)
-      });
+      // pts.sort((a, b) => {
+      //   return Math.atan2(b.y - entities[0].position.y, b.x - entities[0].position.x) - Math.atan2(a.y - entities[0].position.y, a.x - entities[0].position.x)
+      // });
 
-      if (pts.length) {
-        ctx.beginPath();
-        ctx.moveTo(pts[0].x, pts[0].y);
-        pts.forEach(pt => {
-          ctx.lineTo(pt.x, pt.y);
-        });
+      // if (pts.length) {
+      //   ctx.beginPath();
+      //   ctx.moveTo(pts[0].point.x, pts[0].point.y);
+      //   pts.forEach(pt => {
+      //     ctx.lineTo(pt.point.x, pt.point.y);
+      //   });
 
-        const gradient = ctx.createRadialGradient(
-          entities[0].position.x, entities[0].position.y,
-          0,
-          entities[0].position.x, entities[0].position.y,
-          500
-          )
-        gradient.addColorStop(0, 'rgba(255, 255, 255, .4)');
-        gradient.addColorStop(1, 'rgba(255, 255, 255, .01)');
-        ctx.fillStyle = gradient; // 'rgba(255, 255, 255, .1)';
-        ctx.fill();
-      }
+      //   const gradient = ctx.createRadialGradient(
+      //     entities[0].position.x, entities[0].position.y,
+      //     0,
+      //     entities[0].position.x, entities[0].position.y,
+      //     500
+      //     )
+      //   gradient.addColorStop(0, 'rgba(255, 255, 255, .4)');
+      //   gradient.addColorStop(1, 'rgba(255, 255, 255, .01)');
+      //   ctx.fillStyle = gradient; // 'rgba(255, 255, 255, .1)';
+      //   ctx.fill();
+      // }
 
       requestAnimationFrame(render);
     }
