--- a/shooter/index.html
+++ b/shooter/index.html
@@ -89,7 +89,7 @@
         boundary.render(ctx);
       });
 
-      entities[0].position.addTo(Vector.create(gamepad.dpad1[0] * .5, gamepad.dpad1[1] * .5));
+      entities[0].position.addTo(Vector.create(gamepad.dpad1[0] * 1.5, gamepad.dpad1[1] * 1.5));
       // entities[1].position.addTo(Vector.create(gamepad.dpad2[0] * 1, gamepad.dpad2[1] * 1));
       entities.forEach(entity => {
         // entity.velocity.length -= .1;
