pixi: change canvas size

--- a/pixi/index.html
+++ b/pixi/index.html
@@ -6,10 +6,12 @@
 
     <style>
       html, body {
-        margin: 0; padding: 0;
+        margin: auto; 
+        padding: 0;
+        max-width: 640px;
       }
       canvas {
-        width: 50%;
+        width: 100%;
       }
     </style>
   </head>
